--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    <button type="button">Saludar</button>
+    <button onclick="hola()">Saludar</button>
+    <script>
+        function hola() {
+          alert ("Hola!");
+        }
+        </script>    
 </body>
 </html>
