--- a/index.html
+++ b/index.html
@@ -4,13 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    
+    <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
-    <button onclick="hola()">Saludar</button>
+    <div id="d">
+        <button onclick="hola()">Saludar</button>
+    </div>
     <script>
         function hola() {
           alert ("Hola!");
         }
-        </script>    
+    </script>   
+    <script src=eventos.js></script> 
 </body>
 </html>
